# equilibria

./: .gitignore  README.md
.github/: CODEOWNERS  IMPLEMENTATION_NOTES.md  RULESETS.md  RULESET_SETUP_GUIDE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: design-rfc.yml
.github/ruleset-configs/: README.md  development-branches.json  main-protection.json  release-tags.json
api/: README.md  pyproject.toml
api/src/equilibria_api/: __init__.py  controller_client.py  main.py  routes.py
api/tests/: test_controller_client.py
controller/: CMakeLists.txt  README.md  main.cpp
controller/src/: config.h  controller.cpp  controller.h  ipc_protocol.cpp  ipc_protocol.h  ipc_server.cpp  ipc_server.hpp  main.cpp  telemetry_publisher.h
controller/tests/: CMakeLists.txt  README.md  test_framework.hpp  test_ipc_protocol.cpp
docs/: dev_quickstart.md  protocol.md
shared/include/: ipc_protocol.hpp  json_utils.hpp
shared/tests/: CMakeLists.txt  test_ipc_protocol.cpp
ui/src/: api.ts
ui/src/views/: Dashboard.vue
